# live-bootcamp-project

./: .env  compose.prod.override.yml  compose.yml  docker.sh  nginx.conf
.github/workflows/: prod.yml
app-service/: Cargo.toml  Dockerfile  build.rs
app-service/config/: default.toml  prod.toml
app-service/proto/: auth.proto
app-service/src/: app_state.rs  main.rs
app-service/src/presentation/: grpc_auth_service_client_impl.rs  mod.rs
app-service/src/utils/config/: app_settings.rs  mod.rs
auth-service/: Cargo.toml  Dockerfile  api_schema.yml  build.rs  postman.input.json
auth-service/assets/: index.html
auth-service/config/: default.toml  test.toml
auth-service/src/: app_state.rs  lib.rs  main.rs
auth-service/src/domain/: data_stores.rs  email.rs  email_client.rs  error.rs  mod.rs  password.rs  user.rs
auth-service/src/domain/data_stores/: banned_token_store.rs  mod.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs  two_fa_code_store.rs  user_store.rs
auth-service/src/presentation/: grpc_auth_service_impl.rs  mod.rs
auth-service/src/roles_assignment/: mod.rs  roles.rs  roles_extractors.rs  roles_middleware.rs  roles_service.rs  user_role.rs
auth-service/src/routes/: delete_account.rs  login.rs  logout.rs  mod.rs  refresh_token.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs
auth-service/src/services/data_stores/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mock_email_client.rs  mod.rs  postgres_user_store.rs  postmark_email_client.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/utils/: auth.rs  constants.rs  mod.rs  tracing.rs
auth-service/src/utils/config/: auth_settings.rs  mod.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  main.rs  refresh_token.rs  root.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
