[package]
name = "app-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["cookie"] }
config = "0.14"
prost = "0.12"
prost-types = "0.12"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5.0", features = ["fs"] }
tokio = { version = "1", features = ["full"] }
tonic = "0.11"

[build-dependencies]
tonic-build = "0.11"