[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.78"
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["cookie"] }
chrono = "0.4.35"
dotenvy = "0.15.7"
jsonwebtoken = "9.2.0"
lazy_static = "1.4.0"
mockall = "0.10.2"
prost = "0.12"
prost-types = "0.12"
rand = "0.8.5"
regex = "1"
reqwest = { version = "0.11.26", default-features = false, features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "migrate"] }
tokio = { version = "1.36", features = ["full"] }
tonic = "0.11"
tower-http = { version = "0.5.0", features = ["fs", "cors"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }

[build-dependencies]
tonic-build = "0.11"