[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.78"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["cookie", "typed-header"] }
chrono = "0.4.35"
color-eyre = "0.6.3"
config = "0.14"
dotenvy = "0.15.7"
fake = "4.4.0"
jsonwebtoken = "9.2.0"
lazy_static = "1.4.0"
mockall = "0.10.2"
prost = "0.12"
prost-types = "0.12"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
rand = "0.8.5"
redis = { version = "0.25.2", features = ["tokio-comp"] }
regex = "1"
reqwest = { version = "0.11.26", default-features = false, features = ["json", "rustls-tls", "cookies"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "migrate"] }
thiserror = "1.0.58"
tokio = { version = "1.47", features = ["full"] }
tonic = "0.11"
tower-http = { version = "0.5.0", features = ["fs", "cors", "trace"] }
tracing = "0.1.41"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
wiremock = "0.6.0"

[build-dependencies]
tonic-build = "0.11"